--- a/picklesjar.example-jvm/pom.xml
+++ b/picklesjar.example-jvm/pom.xml
@@ -5,7 +5,7 @@
 
 	<name>Pickles example project for Java</name>
 	<description></description>
-	<url>https://github.com/PicklesJar/pickes</url>
+	<url>https://github.com/PicklesJar/pickles</url>
 
 	<groupId>picklesjar</groupId>
 	<artifactId>picklesjar.example-jvm</artifactId>
@@ -150,7 +150,7 @@
 			
 			<!-- UT -->
 			<dependency>
-				<groupId>jp.picklesjar</groupId>
+				<groupId>picklesjar</groupId>
 				<artifactId>pickledbeans.ut.jp</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 				<type>jar</type>
