--- a/picklesjar.example-jvm/example.ut/pom.xml
+++ b/picklesjar.example-jvm/example.ut/pom.xml
@@ -10,12 +10,13 @@
 	<parent>
 		<groupId>picklesjar</groupId>
 		<artifactId>picklesjar.example-jvm</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${project.version}</version>
 	</parent>
 	<artifactId>example.ut</artifactId>
 	<packaging>jar</packaging>
 
 	<properties>
+		<project.version>0.1</project.version>
 	</properties>
 
 	<build>
