--- a/picklesjar.example-jvm/pom.xml
+++ b/picklesjar.example-jvm/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<name>Pickles example project for Java</name>
+	<name>PicklesJar example for Java</name>
 	<description></description>
-	<url>https://github.com/PicklesJar/pickles</url>
+	<url>https://github.com/PicklesJar/documents</url>
 
 	<groupId>picklesjar</groupId>
 	<artifactId>picklesjar.example-jvm</artifactId>
@@ -13,7 +13,7 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<project.version>0.1</project.version>
+		<project.version>0.1.1</project.version>
 		<test.cucumber.version>1.2.2</test.cucumber.version>
 	</properties>
 
