[0.1.1-UT001] 定義更新＆自動更新系処理利用定義追加.
pom.xml のバージョン定義方法の更新.
Annotation Processor の利用定義追加.
====
PicklesJar/documents#1
[skip ci]

--- a/picklesjar.example-jvm/example.ut/pom.xml
+++ b/picklesjar.example-jvm/example.ut/pom.xml
@@ -10,12 +10,13 @@
 	<parent>
 		<groupId>picklesjar</groupId>
 		<artifactId>picklesjar.example-jvm</artifactId>
-		<version>${project.version}</version>
+		<version>0.1.1</version>
 	</parent>
 	<artifactId>example.ut</artifactId>
 	<packaging>jar</packaging>
 
 	<properties>
+		<project.version>0.1.1</project.version>
 	</properties>
 
 	<build>
