[0.1.1-UT001] PicklesJar.Brine のプロジェクト名変更に伴うバグへの Bug-FIXed.
====
PicklesJar/documents#2
[skip ci]

--- a/picklesjar.example-jvm/example.ut/pom.xml
+++ b/picklesjar.example-jvm/example.ut/pom.xml
@@ -40,6 +40,10 @@
 			<groupId>picklesjar</groupId>
 			<artifactId>pickledbeans.ut.jp</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>picklesjar</groupId>
+			<artifactId>brine.base</artifactId>
+		</dependency>
 		
 	</dependencies>
 
