--- a/picklesjar.example-jvm/pom.xml
+++ b/picklesjar.example-jvm/pom.xml
@@ -82,6 +82,23 @@
 					
 				</executions>
 			</plugin>
+			
+			<plugin>
+				<groupId> org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19</version>
+				<configuration>
+					<argLine>-Dfile.encoding=UTF-8</argLine>
+					<includes>
+						<include>**/*.class</include>
+					</includes>
+				<!--
+					<excludes>
+						<exclude></exclude>
+					</excludes>
+				-->
+				</configuration>
+			</plugin>
 
 		</plugins>
 
@@ -117,16 +134,19 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<type>jar</type>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-picocontainer</artifactId>
 			<version>${test.cucumber.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
 			<version>${test.cucumber.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
@@ -143,7 +163,7 @@
 			</dependency>
 			<dependency>
 				<groupId>picklesjar</groupId>
-				<artifactId>brine.ut</artifactId>
+				<artifactId>brine.base</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 			</dependency>
